[gd_scene load_steps=27 format=2]

[ext_resource path="res://Bookson/05.png" type="Texture" id=1]
[ext_resource path="res://Bookson/08.png" type="Texture" id=2]
[ext_resource path="res://Bookson/01.png" type="Texture" id=3]
[ext_resource path="res://Bookson/07.png" type="Texture" id=4]
[ext_resource path="res://Bookson/06.png" type="Texture" id=5]
[ext_resource path="res://Bookson/09.png" type="Texture" id=6]
[ext_resource path="res://Bookson/011.png" type="Texture" id=7]
[ext_resource path="res://Bookson/012.png" type="Texture" id=8]
[ext_resource path="res://Bookson/010.png" type="Texture" id=9]
[ext_resource path="res://Bookson/013.png" type="Texture" id=10]
[ext_resource path="res://Bookson/014.png" type="Texture" id=11]
[ext_resource path="res://Bookson/015.png" type="Texture" id=12]
[ext_resource path="res://Bookson/016.png" type="Texture" id=13]
[ext_resource path="res://Bookson/017.png" type="Texture" id=14]
[ext_resource path="res://Bookson/00.png" type="Texture" id=15]
[ext_resource path="res://Bookson/04.png" type="Texture" id=16]
[ext_resource path="res://Cenas/Book.gd" type="Script" id=17]
[ext_resource path="res://Bookson/03.png" type="Texture" id=18]
[ext_resource path="res://Bookson/2.png" type="Texture" id=19]
[ext_resource path="res://Bookson/00(GOKU).png" type="Texture" id=20]
[ext_resource path="res://Bookson/17(ALTER).png" type="Texture" id=21]
[ext_resource path="res://Arrow/ArrowNotHoverLeft.png" type="Texture" id=22]
[ext_resource path="res://Arrow/ArrowNotHover.png" type="Texture" id=23]
[ext_resource path="res://Arrow/ArrowHover.png" type="Texture" id=24]
[ext_resource path="res://Arrow/ArrowHoverLeft.png" type="Texture" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 3 ), ExtResource( 15 ) ],
"loop": false,
"name": "BookRight",
"speed": 8.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 3 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "BookLeft",
"speed": 8.0
} ]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 17 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Book" type="AnimatedSprite" parent="CanvasLayer"]
visible = false
position = Vector2( 514.5, 257 )
scale = Vector2( 1.27375, 1.21379 )
frames = SubResource( 1 )
animation = "BookRight"
frame = 17
playing = true
flip_h = true

[node name="Page2" type="TextureRect" parent="CanvasLayer"]
visible = false
margin_left = 5.0
margin_top = -96.0
margin_right = 1025.0
margin_bottom = 611.0
texture = ExtResource( 20 )
expand = true

[node name="Page1" type="TextureRect" parent="CanvasLayer"]
margin_left = 4.0
margin_top = -96.0
margin_right = 1024.0
margin_bottom = 611.0
texture = ExtResource( 21 )
expand = true

[node name="RIGHT" type="TextureButton" parent="CanvasLayer"]
margin_left = 838.0
margin_top = 479.0
margin_right = 894.0
margin_bottom = 529.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 25 )
texture_hover = ExtResource( 22 )
expand = true
stretch_mode = 6

[node name="LEFT" type="TextureButton" parent="CanvasLayer"]
margin_left = 140.0
margin_top = 479.0
margin_right = 196.0
margin_bottom = 529.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 23 )
texture_hover = ExtResource( 24 )
expand = true
stretch_mode = 6

[connection signal="pressed" from="CanvasLayer/RIGHT" to="." method="_on_RIGHT_pressed"]
[connection signal="pressed" from="CanvasLayer/LEFT" to="." method="_on_LEFT_pressed"]
